PostGIS 3.4.3
xxxx/xx/xx

This version requires PostgreSQL 12-16, GEOS 3.6 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.12+ is needed.
To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.

* Bug Fixes *

 - #5698, Fix robustness issue splitting line by vertex very close to endpoints,
          affecting topology population functions (Sandro Santilli)
 - #5649, ST_Value should return NULL on missing band (Paul Ramsey)
 - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)
 - #5679, Remove spurious COMMIT statements from sfcgal script
          (Sandro Santilli, Loïc Bartoletti)
 - #5680, Fix populate_topology_layer with standard_conforming_strings
          set to off (Sandro Santilli)
 - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 - #5686, ST_NumInteriorRings and Triangle crash (Paul Ramsey)
 - #5666, Build reproducibility: timestamps
          in extension upgrade SQL scripts (James Addison)
 - #5671, Bug in ST_Area function with use_spheroid=false
          (Paul Ramsey, Regina Obe)
 - #5687, Don't rely on search_path to determine postgis schema
           Fix for PG17 security change (Regina Obe)
 - #5695, [address_standardizer_data_us] standardize_address
          incorrect handling of directionals (Regina Obe)

PostGIS 3.4.2
2024/02/08

* Bug Fixes *

 - #5633, Fix load, upgrade and usage with standard_conforming_strings
          set to off (Sandro Santilli, Regina Obe)
 - #5571, Memory over-allocation for narrow inputs (Paul Ramsey)
 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, #5647, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5629, Handling EMPTY components in repeated point removal (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - #5648, postgis_raster upgrade fails on PG16 (Ronan Dunklau)